--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: stcalica/update-lambda@master
         with:
           package: lambda.zip
-          function-name: atlassian-marketplace-license-handler
+          function-name: ${{ secrets.AWS_LAMBDA_FUNCTION_NAME }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_SECRET_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
